--- a/app.json
+++ b/app.json
@@ -1,21 +1,31 @@
 {
   "expo": {
-    "name": "tictok_3",
-    "slug": "tictok_3",
+    "name": "tiktok",
+    "slug": "tiktok",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
+    "updates": {
+      "url": "https://u.expo.dev/c2f30144-62d5-447f-94aa-9e54d110fda8"
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.masaharu_ura.tiktok",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -32,10 +42,28 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
       ]
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "c2f30144-62d5-447f-94aa-9e54d110fda8"
+      }
+    },
+    "owner": "masaharu_ura",
+    "ios": {}
   }
 }
