--- a/eas.json
+++ b/eas.json
@@ -7,10 +7,16 @@
       "development": {
         "developmentClient": true,
         "distribution": "internal",
+        "env": {
+          "APP_VARIANT": "development"
+        },
         "channel": "development"
       },
       "preview": {
         "distribution": "internal",
+        "env": {
+          "APP_VARIANT": "preview"
+        },
         "channel": "preview"
       },
       "production": {
