--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.15",
+    "expo-env": "^1.1.1",
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
